--- a/WenElevating.Resources/ThemeColors/LightColors.xaml
+++ b/WenElevating.Resources/ThemeColors/LightColors.xaml
@@ -3,6 +3,8 @@
     <SolidColorBrush x:Key="IconBackground" Color="#9F9F9F" />
     <SolidColorBrush x:Key="IconBrush" Color="#898989" />
     <SolidColorBrush x:Key="IconSelectedBrush" Color="#4772FA" />
+    <SolidColorBrush x:Key="AddTaskButtonBackground" Color="#4772FA" />
+    <SolidColorBrush x:Key="AddTaskButtonForeground" Color="#FFFFFF" />
     <SolidColorBrush x:Key="PopupBackground" Color="#DDDDDD" />
     <SolidColorBrush x:Key="PopupContentBackground" Color="#FFFFFF" />
     <SolidColorBrush x:Key="ButtonSelectedBackground" Color="#F2F2F2" />
